tests/scan/fixtures/validation/negative/clean_cargo_clean_queue_crate/src/lib.rs
//! A clean Rust crate: clean_queue_crate.

pub fn hello() -> &'static str { "hello" }
